[package]
name = "vrcpm-installer"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[package.metadata.winres]
OriginalFilename = "vrcpm-installer.exe"
LegalCopyright = "Copyright © 2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.27"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.105"
tar = "0.4.40"
tokio = { version = "1", features = ["full"] }
mslnk = "0.1.8"

[build-dependencies]
winres = "0.1"
